Fix wrong alignment of fields
When we show/hide first field in a row dynamically,
the next field may be not aligned properly.

Fixes RM-5203

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -118,6 +118,10 @@
 	margin-bottom: 0;
 }
 
+.panel .row-fluid > .form-item-hidden:first-child + .form-item {
+	margin-left: 0;
+}
+
 .panel .row-fluid:last-child > .form-item-hidden,
 .panel .row-fluid:last-child > .form-item {
 	margin-bottom: 1px;
